--- a/css/style.css
+++ b/css/style.css
@@ -5,12 +5,11 @@
 }
 
 body {
-  background: black;
+  background: yellow;
 }
 
 h1 {
   font-size: 50px;
-  text-align: center;
 }
 
 /*# sourceMappingURL=style.css.map */
