--- a/css/style.css
+++ b/css/style.css
@@ -4,12 +4,9 @@
   padding: 0;
 }
 
-body {
-  background: yellow;
-}
-
 h1 {
   font-size: 50px;
+  font-family: 'Roboto Slab', serif;
 }
 
 /*# sourceMappingURL=style.css.map */
