--- a/sass/style.scss
+++ b/sass/style.scss
@@ -4,11 +4,11 @@
   padding: 0;
 }
 
-body {
-  background: yellow;
-}
+// body {
+//   background: black;
+// }
 
 h1 {
   font-size: 50px;
-
+  font-family: 'Roboto Slab', serif;
 }
