--- a/css/style.css
+++ b/css/style.css
@@ -9,4 +9,15 @@ h1 {
   font-family: 'Roboto Slab', serif;
 }
 
+.hover-style:hover {
+  color: blue;
+  font-weight: bold;
+}
+
+.re-position {
+  z-index: 2;
+  top: 300px;
+  left: 300px;
+}
+
 /*# sourceMappingURL=style.css.map */
